[tool.poetry]
name = "hack-ip"
version = "2.0.0"
description = "A tool to get IP and system information of a specific device."
authors = ["Subhomoy Roy Choudhury <subhomoyrchoudhury@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://example.com"
repository = "https://github.com/subhomoy-roy-choudhury/hack-ip"
keywords = ["IP", "system-info", "networking"]
packages = [{ include = "hackip" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rich = "^12.6.0"
requests = "^2.28.1"
setuptools = "^58.5.3"
psutil = "^5.9.0"
maxminddb-geolite2 = "^2018.703"
art = "^6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^6.1.0"
tox = "^4.11.4"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
test = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
