[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hack-ip"
version = "0.0.0"
description = "This is a tool to get IP and system information of a specific device"
authors = ["Subhomoy Roy Choudhury <subhomoyrchoudhury@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/subhomoy-roy-choudhury/Hack_IP"
repository = "https://github.com/subhomoy-roy-choudhury/Hack_IP"
keywords = ["IP", "system-info", "networking"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "hackip" }]

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rich = "^12.6.0"
requests = "^2.28.1"
psutil = "^5.9.0"
maxminddb-geolite2 = "^2018.703"
art = "^6.1"
openai = "^1.6.1"
python-nmap = "^0.7.1"
netifaces = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^6.1.0"
tox = "^4.11.4"
poetry-dynamic-versioning = "^1.2.0"
pre-commit = { version = "^3.6.0", python = ">=3.9" }
isort = "^5.13.2"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
hackip = "hackip.main:execute"
