[metadata]
name = Hack_IP
version = 2.1.0
author = Subhomoy Roy Choudhury
author_email = subhomoyrchoudhury@gmail.com
description = This is a tool to get IP and system information of a specific device
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/subhomoy-roy-choudhury/Hack_IP
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7, <3.12
install_requires =
    psutil
    requests
    maxminddb-geolite2
include_package_data = True

[options.entry_points]
console_scripts =
    hackip=hackip.main:execute

